--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "swiper": "^11.1.9",
     "typescript": "4.9.5"
   },
   "devDependencies": {
