--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "dotenv": "^16.0.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "^10.18.0",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.4.3",
+    "react-intersection-observer": "^9.16.0",
     "swiper": "^11.1.9",
     "typescript": "4.9.5"
   },
